fixed about section scroll on mobile. Adjusted image brightness for Product section images

--- a/style.css
+++ b/style.css
@@ -206,8 +206,13 @@ header {
   cursor: pointer;
 }
 
+.social-icon a {
+  list-style: none;
+  color: white;
+}
+
 .social-icon.active {
-  color: black;
+  color: white;
 }
 
 .social-icon:hover {
@@ -413,12 +418,14 @@ header {
   width: 40%;
   right: 12.7%;
   top: 9.5%;
+  filter: brightness(1.5);
 }
 
 .product img:nth-of-type(2) {
   width: 28%;
   right: 6%;
   top: 22%;
+  filter: brightness(1.3);
   margin-top: 16%;
 }
 
@@ -714,7 +721,7 @@ html body [data-ca3_iconfont='ETmodules']::before {
   line-height: 60px;
   position: absolute;
   left: 50%;
-  margin-left: -20px;
+  margin-left: -10px;
   bottom: 50px;
   color: #fff;
   text-align: center;
@@ -867,7 +874,7 @@ html body [data-ca3_iconfont='ETmodules']::before {
   /* ABOUT */
 
   .about-quote {
-    top: 22%;
+    top: 27%;
     width: 76%;
     font-size: 2em;
     margin-top: 11%;
@@ -887,13 +894,13 @@ html body [data-ca3_iconfont='ETmodules']::before {
     margin-top: 25px;
   }
 
-  .about img:nth-of-type(1) {
+  .about-section img:nth-of-type(1) {
     width: 60%;
     right: 6%;
-    top: 14%;
+    top: 17%;
   }
 
-  .about img:nth-of-type(2) {
+  .about-section img:nth-of-type(2) {
     display: none;
   }
 
